wip - test tesseract.js with input image files

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>URLSpotting</title>
 <body>
+    <div class="flex justify-content-between">
+        <input type="file" name="image" id="uploader">
 
+        <p id="result"></p>
+    </div>
 </body>
 <script src="./app.js"></script>
 </html>
