Experiment with image html element

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>URLSpotting</title>
 <body>
     <div class="flex justify-content-between">
-        <input type="file" name="image" id="uploader">
-
+        <img id="url-image" src="./images/sample.jpg" alt="Image with url">
         <p id="result"></p>
     </div>
 </body>
